# chess-assistant

./: .gitignore  README.md  config.yaml  experiment_robot.ipynb  main.py  pyproject.toml
.app_metadata/: reachy_mini_testbench.json
data/raw_images/reachy_board_2026-06-13_233223/: metadata.json
demo/: demo.py
demo/assets/image/: metadata.json
demo/assets/setup_1/: calibration_metadata.json
demo/assets/setup_1/position_1/: metadata.json
demo/assets/setup_1/position_2/: metadata.json
reachy_chess/: game.py
src/chess_assistant/: antennas_input.py  audition_speech.py  calibration.py  calibration_monitor.py  camera.py  camera_utils.py  config.py  data_generation.py  engine.py  game.py  image_processing.py  input.py  main.py  outro.py  pregenerate_speech.py  regenerate.py  robot.py  setup.py  speech_clips.py  vision.py
src/chess_assistant/model/: config.py  config.yaml  data.py  evaluate.py  main.py  model.py  train.py
src/reachy_chess/: vision.py
tests/: conftest.py  test_calibration.py  test_camera_utils.py  test_config.py  test_data_generation.py  test_dataset_creation.py  test_game.py  test_image_processing.py  test_model.py  test_outro.py  test_regenerate.py  test_robot.py  test_speech_clips.py  test_vision.py
weights/: README.md  model_state_dict.safetensors
