[project]
name = "chess-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.1",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "omegaconf>=2.3.1",
    "opencv-python>=4.13.0.92",
    "python-chess>=1.999",
    "python-dotenv>=1.2.2",
    "reachy-mini[mujoco]>=1.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
