[project]
name = "chess-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.1",
    "hydra-core>=1.3.4",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "omegaconf>=2.3.1",
    "opencv-python>=4.13.0.92",
    "polars>=1.42.1",
    "pygame>=2.6.0",
    "python-chess>=1.999",
    "python-dotenv>=1.2.2",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "wandb>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
robot = [
    "kokoro>=0.9.4",
    "reachy-mini[mujoco]>=1.8.4",
    "scipy>=1.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
