[project]
name = "chess-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Felix Fabricius" }]
requires-python = ">=3.12"
# GPL-3.0-or-later is required, not chosen: python-chess is GPL-3.0-or-later and
# chess.Board.legal_moves is load-bearing for the move-ranking core. See README.
# The bundled model weights under weights/ are Apache-2.0 and are not part of this
# distribution; see weights/README.md.
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "anthropic>=0.109.1",
    "hydra-core>=1.3.4",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "omegaconf>=2.3.1",
    "opencv-python>=4.13.0.92",
    "polars>=1.42.1",
    "pygame>=2.6.0",
    "python-chess>=1.999",
    "python-dotenv>=1.2.2",
    "safetensors>=0.8.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "wandb>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
robot = [
    "kokoro>=0.9.4",
    "reachy-mini[mujoco]>=1.8.4",
    "scipy>=1.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
